--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ header {
   font-size: var(--text);
 }
 
-.hero-text a {
+/* .hero-text a {
   color: var(--white-text);
   display: inline-block;
   text-decoration: none;
@@ -191,15 +191,97 @@ header {
   padding: 1rem;
   background: #585252;
   border-radius: 5px;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+} */
+.custom-btn {
+  color: var(--white-text);
+  display: inline-block;
+  text-decoration: none;
+  font-size: var(--text);
+  font-weight: 700;
+  margin-top: 3rem;
+  padding: 1.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+  position: relative;
+  display: inline-block;
+  box-shadow: inset 2px 2px 2px 0px #00b4d8, 7px 7px 20px 0px #0077b6,
+    4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+.btn {
+  /* background-color: linear-gradient(0.7turn, #0077b6, #00b4d8); */
+  background-color: #00b4d8;
+}
+.btn span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.btn:before,
+.btn:after {
+  position: absolute;
+  content: "";
+  right: 0;
+  bottom: 0;
+  background: #00b4d8;
+  box-shadow: 4px 4px 6px 0 #0077b6, -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
+    inset -4px -4px 6px 0 #0077b6, inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
+  transition: all 0.3s ease;
+}
+.btn:before {
+  height: 0%;
+  width: 2px;
+}
+.btn:after {
+  width: 0%;
+  height: 2px;
+}
+.btn:hover:before {
+  height: 100%;
+}
+.btn:hover:after {
+  width: 100%;
+}
+.btn:hover {
+  background: #0077b6;
+}
+.btn span:hover {
+  color: #fff;
+}
+.btn span:before,
+.btn span:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  transition: all 0.3s ease;
+}
+.btn span:before {
+  width: 2px;
+  height: 0%;
+}
+.btn span:after {
+  height: 2px;
+  width: 0%;
+}
+.btn span:hover:before {
+  height: 100%;
+}
+.btn span:hover:after {
+  width: 100%;
 }
 
-.hero-text a:hover {
+/* .hero-text a:hover {
   background: transparent;
   border: 2px solid white;
 }
 .hero-text a:active {
   transform: scale(0.9);
-}
+} */
 
 header > img {
   position: absolute;
