--- a/style.css
+++ b/style.css
@@ -480,64 +480,71 @@ header > img {
   color: var(--main-color);
 }
 
-.cards-port {
-  width: 90%;
-  margin: 5rem auto 0rem auto;
+.portfolio-container {
   display: flex;
-  position: relative;
-  z-index: 10;
-  align-items: center;
-  justify-content: space-around;
   flex-wrap: wrap;
-  min-height: 60vh;
-}
-.card-port {
-  border: 2px solid var(--main-color);
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3), 0px 20px 20px rgba(0, 0, 0, 0.1);
-  text-align: left;
-  background: white;
-  flex: 0 1 10rem;
-  min-height: 40vh;
-  border-radius: 8px;
-  margin-bottom: 3rem;
-}
-.card-port h5 {
-  font-size: 2rem;
-  margin: 1rem 1rem;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-.card-port span {
-  color: var(--main-color);
-  font-size: 1.6rem;
-  margin: 0rem 1.2rem;
-  font-weight: 500;
-}
-
-.card-port p {
-  font-size: 1.2rem;
-  font-weight: 400;
-  margin: 1rem 1rem 0rem 1.2rem;
-  opacity: 0.7;
-}
-.card-port a {
-  display: flex;
   justify-content: center;
-  margin: 3rem 5rem;
-  font-size: 1.5rem;
-  color: var(--white-text);
-  padding: 1rem 2rem;
-  background: linear-gradient(0.2turn, #3fcac2, #2caa99);
-  border-radius: 6px;
-  text-transform: uppercase;
-}
-.card-port img {
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
+  align-items: center;
+  width: 95%;
+  margin: 0 auto;
+  min-height: 80vh;
 }
 
-.portfolio > img {
+.card-wrap {
+  margin: 6rem;
+  width: 270px;
+  border-radius: 20px;
+  border: 5px solid #fff;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 40px, rgba(0, 0, 0, 0.15) 0px 6px 15px;
+  transition: all 0.2s ease-in-out;
+}
+.card-wrap:hover {
+  transform: scale(1.1);
+}
+.card-header {
+  height: 200px;
   width: 100%;
+  border-radius: 100% 0% 100% 0% / 0% 50% 50% 100%;
+  display: grid;
+  place-items: center;
+}
+.card-header > img {
+  border-radius: 100% 0% 100% 0% / 0% 50% 50% 100%;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+}
+.card-title {
+  text-transform: uppercase;
+  font-size: 2rem;
+  margin: 4rem 0 2rem;
+  font-weight: bold;
+  color: #0077b6;
+}
+.card-text {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 1.8rem;
+}
+.card-btn {
+  border-radius: 5px;
+  padding: 0.8rem 3rem;
+  color: #fff;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  cursor: pointer;
+  background-color: var(--main-color);
+}
+
+.portfolio > svg {
+  /* width: 100%; */
   position: absolute;
   top: 15rem;
 }
@@ -976,7 +983,7 @@ footer p {
   }
 
   .info {
-    min-height: 60vh;
+    min-height: 70vh;
   }
 
   .info img {
